Replaced png files with jpg to fix stretching issue

--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@
     }
   
     #navbar__logo {
-      padding-left: 25px;
+      padding-left: 2rem;
     }
   
     .navbar__toggle .bar {
@@ -412,7 +412,7 @@
   }
   
   /* Mobile Responsive */
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1300px) {
     .main__container {
       display: grid;
       grid-template-columns: 1fr;
@@ -505,7 +505,7 @@
   }
   
   .services__wrapper {
-    display: grid;
+    display: block;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
   }
@@ -516,6 +516,7 @@
     width: 300px;
     border-radius: 4px;
     display: flex;
+    align-items: flex;
     flex-direction: column;
     justify-content: center;
     transition: 0.3s ease-in;
@@ -573,7 +574,7 @@
   /* Footer CSS */
   .footer__container {
     background-color: #131313;
-    padding: 5rem 0;
+    padding: 20rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
